# job-search-agent-workflow

./: .gitignore  README.md  main.py  pyproject.toml
data/: applications.json  jobs.json
